--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <main>
       <div class="profile">
-        <img src="https://drive.google.com/file/d/1K1z4Mt_ez_o0jguvKGU0dM0io5XIbC7S/view?usp=drive_link" alt="Ali Shash photo" />
+        <img src="https://drive.google.com/uc?export=view&id=1K1z4Mt_ez_o0jguvKGU0dM0io5XIbC7S" alt="Ali Shash photo" />
         <div>
           <h2>Ali Shash</h2>
           <p>
