--- a/skills.html
+++ b/skills.html
@@ -1,10 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Ali Shash | Page In Progress</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
 
-</body>
+      body {
+        font-family: "Roboto", sans-serif;
+        background: linear-gradient(to bottom right, #f0f0f0, #e0e0ff);
+        overflow-x: hidden;
+      }
+
+      header {
+        width: 100vw;
+        background-color: #222;
+        color: white;
+        padding: 40px 20px;
+        text-align: center;
+      }
+
+      nav {
+        width: 100vw;
+        background-color: #333;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 20px;
+        padding: 15px 10px;
+      }
+
+      nav a {
+        color: #f0f0f0;
+        text-decoration: none;
+        font-weight: bold;
+        transition: color 0.3s;
+      }
+
+      nav a:hover {
+        color: #ffcc00;
+      }
+
+      .under-construction {
+        padding: 60px 20px;
+        text-align: center;
+        max-width: 700px;
+        margin: auto;
+      }
+
+      .under-construction h2 {
+        font-size: 2em;
+        color: #e67e22;
+        margin-bottom: 20px;
+      }
+
+      .under-construction p {
+        font-size: 1.2em;
+        color: #444;
+      }
+
+      .emoji {
+        font-size: 3em;
+        margin-bottom: 20px;
+      }
+
+      @media (max-width: 768px) {
+        nav {
+          flex-direction: column;
+          align-items: center;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <h1>Ali Shash</h1>
+      <p>
+        Dhanbad, Jharkhand, India | +91-787-067-7731 |
+        <a href="mailto:eng.ali.shash.in@gmail.com" style="color: #f0f0f0"
+          >eng.ali.shash.in@gmail.com</a
+        >
+      </p>
+    </header>
+
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About Me</a>
+      <a href="research.html">Research</a>
+      <a href="projects.html">Projects</a>
+
+      <a href="cv.html">CV</a>
+      <a href="hobbies.html">Hobbies</a>
+    </nav>
+
+    <div class="under-construction">
+      <div class="emoji">🚧</div>
+      <h2>This Page is Under Construction</h2>
+      <p>
+        We are currently working on this page and it will be updated soon.
+        Please check back later!
+      </p>
+    </div>
+  </body>
 </html>
