--- a/cv.html
+++ b/cv.html
@@ -99,7 +99,7 @@
       </p>
       <a
         class="btn-download"
-        href="https://drive.google.com/file/d/1e4w_vbqeP0YWffPb2pm44wvplG1Wkw6n/view?usp=drive_link"
+        href="https://drive.google.com/file/d/1JDiRQT4Yd1xkt1sVOYm04zpCSp-Q61zY/view?usp=sharing"
         download
         >Download CV (PDF)</a
       >
