--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
+<script data-goatcounter="https://shash.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
     <style>
       body {
         font-family: "Roboto", sans-serif;
