--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" type="image/png" href="https://i.postimg.cc/Mpqk65DB/IMG-1839.png">
     <meta name="google-site-verification" content="zhRZW9H5nfSpyonjwTURc7S0EMIRqaFLnsH_vzMSV-Q" />
     <title>Ali Shash | Home</title>
     <link
