--- a/projects.html
+++ b/projects.html
@@ -185,6 +185,12 @@
         <!-- <h3>News Aggregator Android App</h3> -->
       </div>
     </div>
+    <!-- M.Tech Thesis Card -->
+      <div class="project-card" onclick="openPopup('popup4')">
+        <img src="https://i.postimg.cc/DyW5x6xY/IIT-Dhanbad.png" alt="IIT ISM Logo" />
+        <h3 style="text-align: center; margin-top: 10px">M.Tech Thesis</h3>
+      </div>
+    </div>
 
     <!-- Popup 1 -->
     <div id="popup1" class="popup-container">
@@ -251,6 +257,30 @@
           >
             GitHub Repository
           </a>
+        </p>
+      </div>
+    </div>
+    <!-- Popup 4 -->
+    <div id="popup4" class="popup-container">
+      <div class="popup-content">
+        <span class="close" onclick="closePopup('popup4')">&times;</span>
+        <h2>M.Tech Thesis – IIT (ISM) Dhanbad</h2>
+        <p>
+          <strong>Title:</strong> Designing Superpixel-Based Multi-Resolution
+          Model for Enhanced Object Delineation
+        </p>
+        <p>
+          This work introduces a novel superpixel-based segmentation framework
+          that integrates fuzzy clustering, graph-based segmentation, and
+          wavelet-based multi-resolution refinement. It addresses noise
+          sensitivity and boundary rigidity by leveraging Fuzzy C-Means (FCM),
+          Hierarchical Normalized Cuts (HNCut), and spatial-visual affinity
+          metrics including CIEDE2000, LBP, and HSV histograms.
+        </p>
+        <p>
+          The model significantly improves object delineation accuracy in
+          low-contrast and texture-rich images, with applications in medical
+          imaging, surveillance, and computer vision.
         </p>
       </div>
     </div>
