--- a/projects.html
+++ b/projects.html
@@ -169,25 +169,34 @@
     <div class="project-section">
       <!-- Prometheus Project Card -->
       <div class="project-card" onclick="openPopup('popup1')">
-        <img src="https://i.postimg.cc/hGjCqDRZ/pro2.png" alt="Prometheus Screenshot" />
-        <!-- <h3>Prometheus Monitoring System</h3> -->
+        <img
+          src="https://i.postimg.cc/hGjCqDRZ/pro2.png"
+          alt="Prometheus Screenshot"
+        />
       </div>
 
       <!-- Fluentd Project Card -->
       <div class="project-card" onclick="openPopup('popup2')">
-        <img src="https://i.postimg.cc/MGF96CW6/fluntd.png" alt="Fluentd Screenshot" />
-        <!-- <h3>Fluentd Log Management System</h3> -->
+        <img
+          src="https://i.postimg.cc/MGF96CW6/fluntd.png"
+          alt="Fluentd Screenshot"
+        />
       </div>
 
       <!-- News App Project Card -->
       <div class="project-card" onclick="openPopup('popup3')">
-        <img src="https://i.postimg.cc/yd3vkLdF/app.png" alt="News App Screenshot" />
-        <!-- <h3>News Aggregator Android App</h3> -->
+        <img
+          src="https://i.postimg.cc/yd3vkLdF/app.png"
+          alt="News App Screenshot"
+        />
       </div>
-    </div>
-    <!-- M.Tech Thesis Card -->
+
+      <!-- M.Tech Thesis Card -->
       <div class="project-card" onclick="openPopup('popup4')">
-        <img src="https://i.postimg.cc/DyW5x6xY/IIT-Dhanbad.png" alt="IIT ISM Logo" />
+        <img
+          src="https://i.postimg.cc/DyW5x6xY/IIT-Dhanbad.png"
+          alt="IIT ISM Logo"
+        />
         <h3 style="text-align: center; margin-top: 10px">M.Tech Thesis</h3>
       </div>
     </div>
@@ -260,6 +269,7 @@
         </p>
       </div>
     </div>
+
     <!-- Popup 4 -->
     <div id="popup4" class="popup-container">
       <div class="popup-content">
@@ -280,10 +290,20 @@
         <p>
           The model significantly improves object delineation accuracy in
           low-contrast and texture-rich images, with applications in medical
-          imaging, surveillance, and computer vision.
+          imaging and surveillance.
+        </p>
+        <p>
+          🔗
+          <a
+            href="https://github.com/yourusername/mtech-thesis"
+            target="_blank"
+          >
+            GitHub Repository
+          </a>
         </p>
       </div>
     </div>
+
     <script>
       function openPopup(id) {
         document.getElementById(id).style.display = "block";
