--- a/cv.html
+++ b/cv.html
@@ -197,4 +197,12 @@
       <p>Available upon request or see original PDF.</p>
     </section>
   </body>
+<footer style="text-align: center; font-size: 14px; padding: 10px;">
+  &copy; 2016–<span id="year"></span> Ali Shash. All rights reserved.
+</footer>
+
+<script>
+  document.getElementById("year").textContent = new Date().getFullYear();
+</script>
+
 </html>
