--- a/skills.html
+++ b/skills.html
@@ -110,4 +110,12 @@
       </p>
     </div>
   </body>
+<footer style="text-align: center; font-size: 14px; padding: 10px;">
+  &copy; 2016–<span id="year"></span> Ali Shash. All rights reserved.
+</footer>
+
+<script>
+  document.getElementById("year").textContent = new Date().getFullYear();
+</script>
+
 </html>
