--- a/cv.html
+++ b/cv.html
@@ -198,7 +198,7 @@
     </section>
   </body>
 <footer style="text-align: center; font-size: 14px; padding: 10px;">
-  &copy; 2016–<span id="year"></span> Ali Shash. All rights reserved.
+  &copy; <span id="year"></span> Ali Shash. All rights reserved.
 </footer>
 
 <script>
