--- a/hobbies.html
+++ b/hobbies.html
@@ -134,7 +134,7 @@
 
 </body>
 <footer style="text-align: center; font-size: 14px; padding: 10px;">
-  &copy; 2016–<span id="year"></span> Ali Shash. All rights reserved.
+  &copy; <span id="year"></span> Ali Shash. All rights reserved.
 </footer>
 
 <script>
