--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </main>
   </body>
 <footer style="text-align: center; font-size: 14px; padding: 10px;">
-  &copy; 2016–<span id="year"></span> Ali Shash. All rights reserved.
+  &copy; <span id="year"></span> Ali Shash. All rights reserved.
 </footer>
 
 <script>
