--- a/skills.html
+++ b/skills.html
@@ -111,7 +111,7 @@
     </div>
   </body>
 <footer style="text-align: center; font-size: 14px; padding: 10px;">
-  &copy; 2016–<span id="year"></span> Ali Shash. All rights reserved.
+  &copy; <span id="year"></span> Ali Shash. All rights reserved.
 </footer>
 
 <script>
