--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             Master's student in Computer Science and Engineering at IIT Dhanbad
           </p>
           <p>Dhanbad, Jharkhand, India</p>
+          <p>Tartous, Syria</p>
           <p>
             <a href="mailto:eng.ali.shash.in@gmail.com">Email</a> |
             <a href="https://www.linkedin.com/in/ali-i-shash/">LinkedIn</a> |
@@ -91,18 +92,21 @@
       <section id="about">
         <h3 class="section-title">Welcome</h3>
         <p>
-          Hello! I'm Ali Shash, currently pursuing my Master's in Computer
-          Science and Engineering at IIT Dhanbad. My interests revolve around
-          deep learning, image processing, and computer vision. I'm especially
-          fascinated by clustering algorithms and optimization in visual data
-          analysis.
+         I'm Ali Shash, and I have recently completed my Master's in Computer
+          Science and Engineering at IIT Dhanbad, graduating with a CGPA of
+          8.29/10. My M.Tech thesis was titled
+          <b>
+            “Designing a Superpixel-Based Multi-Resolution Model for Enhanced
+            Object Delineation”</b
+          >, carried out under the supervision of Prof. Susanta Mukhopadhyay.
         </p>
 
         <p>
-          Right now, I'm working on projects related to fuzzy clustering and
-          advanced image segmentation. I'm also open to collaborations and
-          academic discussions in machine learning, artificial intelligence, and
-          data analysis.
+          My interests lie in <b> deep learning</b>, <b>image processing</b>,
+          and the intersection of <b>vision and language models</b>. I am
+          currently seeking <b> PhD opportunities </b>in computer vision and artificial
+          intelligence, and I’m truly excited to embrace this new challenge —
+          HERE WE GO!
         </p>
 
         <p>
