--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+
     <style>
       * {
         margin: 0;
@@ -141,6 +146,15 @@
         .project-card {
           width: 90%;
         }
+        .card-title {
+          text-align: center;
+          margin-top: 12px;
+          font-size: 20px;
+          font-weight: 700;
+          font-family: "Montserrat", sans-serif;
+          color: #222;
+          letter-spacing: 0.5px;
+        }
       }
     </style>
   </head>
@@ -198,6 +212,21 @@
           alt="IIT ISM Logo"
         />
         <h3 style="text-align: center; margin-top: 10px">M.Tech Thesis</h3>
+      </div>
+      <!-- Fat-Burning Trainer App Card -->
+      <div class="project-card" onclick="openPopup('popup5')">
+        <img
+          src="https://i.postimg.cc/ThMWR2XY/play.png"
+          alt="Fat Burn App Screenshot"
+        />
+        <h3 style="text-align: center; margin-top: 10px">
+          Fat-Burning Trainer
+        </h3>
+      </div>
+      <!-- See -->
+      <div class="project-card" onclick="openPopup('popup6')">
+        <img src="https://i.postimg.cc/QdMWhy27/vision.png" alt="SEE" />
+        <h3 style="text-align: center; margin-top: 10px">SEE</h3>
       </div>
     </div>
 
@@ -303,7 +332,158 @@
         </p>
       </div>
     </div>
-
+    <!-- Popup 5 -->
+    <div id="popup5" class="popup-container">
+      <div class="popup-content">
+        <span class="close" onclick="closePopup('popup5')">&times;</span>
+        <h2>Fat-Burning Trainer App</h2>
+        <p>
+          This Android application is designed for personal running workouts
+          aimed at reducing belly fat. It follows an interval-based running
+          approach, alternating between high-speed and low-speed running cycles.
+        </p>
+        <ul>
+          <li>
+            <strong>Fast Phase:</strong> Run at a high pace for a user-defined
+            short period.
+          </li>
+          <li><strong>Slow Phase:</strong> Jog slowly for a longer period.</li>
+          <li>
+            <strong>Repeat:</strong> Cycles continue for the full session
+            duration defined by the user.
+          </li>
+          <li>
+            <strong>Auditory Notification:</strong> A short sound clip plays
+            between each phase to prompt the phase change.
+          </li>
+          <li>
+            <strong>Live Countdown:</strong> The app displays a countdown timer
+            and tracks the number of completed cycles.
+          </li>
+        </ul>
+        <p>
+          This app supports user customization for all timing settings and is
+          designed for solo training sessions.
+        </p>
+        <p>
+          🔗
+          <a
+            href="https://github.com/yourusername/fat-burning-trainer"
+            target="_blank"
+          >
+            GitHub Repository
+          </a>
+        </p>
+      </div>
+      <!-- Popup 5 -->
+      <div id="popup5" class="popup-container">
+        <div class="popup-content">
+          <span class="close" onclick="closePopup('popup5')">&times;</span>
+          <h2>Fat-Burning Trainer App</h2>
+          <p>
+            This Android application is designed for personal running workouts
+            aimed at reducing belly fat. It follows an interval-based running
+            approach, alternating between high-speed and low-speed running
+            cycles.
+          </p>
+          <ul>
+            <li>
+              <strong>Fast Phase:</strong> Run at a high pace for a user-defined
+              short period.
+            </li>
+            <li>
+              <strong>Slow Phase:</strong> Jog slowly for a longer period.
+            </li>
+            <li>
+              <strong>Repeat:</strong> Cycles continue for the full session
+              duration defined by the user.
+            </li>
+            <li>
+              <strong>Auditory Notification:</strong> A short sound clip plays
+              between each phase to prompt the phase change.
+            </li>
+            <li>
+              <strong>Live Countdown:</strong> The app displays a countdown
+              timer and tracks the number of completed cycles.
+            </li>
+          </ul>
+          <p>
+            This app supports user customization for all timing settings and is
+            designed for solo training sessions.
+          </p>
+          <p>
+            🔗
+            <a
+              href="https://github.com/yourusername/fat-burning-trainer"
+              target="_blank"
+            >
+              GitHub Repository
+            </a>
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- Popup 5 -->
+    <div id="popup5" class="popup-container">
+      <div class="popup-content">
+        <span class="close" onclick="closePopup('popup5')">&times;</span>
+        <h2>Fat-Burning Trainer App</h2>
+        <p>
+          This Android application is designed for personal running workouts
+          aimed at reducing belly fat. It follows an interval-based running
+          approach, alternating between high-speed and low-speed running cycles.
+        </p>
+        <ul>
+          <li>
+            <strong>Fast Phase:</strong> Run at a high pace for a user-defined
+            short period.
+          </li>
+          <li><strong>Slow Phase:</strong> Jog slowly for a longer period.</li>
+          <li>
+            <strong>Repeat:</strong> Cycles continue for the full session
+            duration defined by the user.
+          </li>
+          <li>
+            <strong>Auditory Notification:</strong> A short sound clip plays
+            between each phase to prompt the phase change.
+          </li>
+          <li>
+            <strong>Live Countdown:</strong> The app displays a countdown timer
+            and tracks the number of completed cycles.
+          </li>
+        </ul>
+        <p>
+          This app supports user customization for all timing settings and is
+          designed for solo training sessions.
+        </p>
+        <p>
+          🔗
+          <a
+            href="https://github.com/yourusername/fat-burning-trainer"
+            target="_blank"
+          >
+            GitHub Repository
+          </a>
+        </p>
+      </div>
+    </div>
+    <!-- Popup 6 -->
+    <div id="popup6" class="popup-container">
+      <div class="popup-content">
+        <span class="close" onclick="closePopup('popup6')">&times;</span>
+        <h2>Coming Soon</h2>
+        <p>This project is under development. Stay tuned for updates!</p>
+        <p>
+          🔗
+          <a
+            href="https://github.com/yourusername/fat-burning-trainer"
+            target="_blank"
+          >
+            GitHub Repository
+          </a>
+        </p>
+      </div>
+    </div>
     <script>
       function openPopup(id) {
         document.getElementById(id).style.display = "block";
@@ -323,12 +503,4 @@
       };
     </script>
   </body>
-<footer style="text-align: center; font-size: 14px; padding: 10px;">
-  &copy; <span id="year"></span> Ali Shash. All rights reserved.
-</footer>
-
-<script>
-  document.getElementById("year").textContent = new Date().getFullYear();
-</script>
-
 </html>
